fix slider arrow on mobile screen

--- a/public/templates/s-cart-light/css/responsive.css
+++ b/public/templates/s-cart-light/css/responsive.css
@@ -850,4 +850,12 @@
         width: 80%;
         margin: -50px auto 0px;
     }
+    
+    .about-legacy .owl-carousel .owl-nav button.owl-next {
+        right: 15%;
+    }
+
+    .about-legacy .owl-carousel .owl-nav button.owl-prev {
+        left: 15%;
+    }
 }
